--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^11.4.2",
     "react-hook-form": "^7.19.1",
     "react-paginate": "^8.0.0",
     "react-router-breadcrumbs-hoc": "^4.1.0",
