--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "node-sass": "^6.0.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-data-table-component": "^7.4.5",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.4.2",
     "react-hook-form": "^7.19.1",
