--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dropzone": "^11.4.2",
     "react-hook-form": "^7.19.1",
     "react-paginate": "^8.0.0",
+    "react-pdf": "^5.5.0",
     "react-router-breadcrumbs-hoc": "^4.1.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
